--- a/server/InnAiServer/InnAiServer/appsettings.Development.json
+++ b/server/InnAiServer/InnAiServer/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MongoDb": "mongodb://root:password@localhost:27017/"
   }
 }
