--- a/server/InnAiServer/InnAiServer/InnAiServer.csproj
+++ b/server/InnAiServer/InnAiServer/InnAiServer.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0-rc.1.22427.2"/>
         <PackageReference Include="MongoDB.Driver" Version="2.21.0" />
+        <PackageReference Include="NCrontab" Version="3.3.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
