--- a/server/InnAiServer/InnAiServer/appsettings.Development.json
+++ b/server/InnAiServer/InnAiServer/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
     "MongoDb": "mongodb://root:password@localhost:27017/"
+  },
+  "RainRadarOptions": {
+    "ApiBaseUrl": "https://api.rainviewer.com"
+  },
+  "InnLevelOptions": {
+    "ApiBaseUrl": "https://api.pegelalarm.at"
   }
 }
