--- a/.github/workflows/docker-image-server.yml
+++ b/.github/workflows/docker-image-server.yml
@@ -14,6 +14,11 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: ./server
+
     
     permissions:
       contents: read
@@ -41,7 +46,6 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v4.1.1
       with:
-        working-directory: ./server
         context: ./InnAiServer/InnAiServer/
         push: true
         tags: ${{ steps.meta.outputs.tags }}
