--- a/.github/workflows/docker-image-server.yml
+++ b/.github/workflows/docker-image-server.yml
@@ -43,7 +43,7 @@ jobs:
       uses: docker/build-push-action@v4.1.1
       with:
         file: ./server/InnAiServer/InnAiServer/Dockerfile
-        context: ./server
+        context: ./server/
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
