--- a/.github/workflows/docker-image-server.yml
+++ b/.github/workflows/docker-image-server.yml
@@ -42,8 +42,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v4.1.1
       with:
-        file: ./server/InnAiServer/InnAiServer/Dockerfile
-        context: ./server/
+        context: ./server/InnAiServer
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
