Added configuration for production

--- a/server/InnAiServer/InnAiServer/appsettings.json
+++ b/server/InnAiServer/InnAiServer/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "ConnectionStrings": {
+    "MongoDb": "${MONGODB_CONNECTION_STRING}"
+  },
+  "RainRadarOptions": {
+    "ApiBaseUrl": "${RAINRADAR_APIBASEURL}"
+  },
+  "InnLevelOptions": {
+    "ApiBaseUrl": "${INNLEVEL_APIBASEURL}"
+  }
 }
