Updated api urls

--- a/server/InnAiServer/InnAiServer/appsettings.json
+++ b/server/InnAiServer/InnAiServer/appsettings.json
@@ -11,9 +11,9 @@
     "MongoDb": "${MONGODB_CONNECTION_STRING}"
   },
   "RainRadarOptions": {
-    "ApiBaseUrl": "${RAINRADAR_APIBASEURL}"
+    "ApiBaseUrl": "https://api.rainviewer.com"
   },
   "InnLevelOptions": {
-    "ApiBaseUrl": "${INNLEVEL_APIBASEURL}"
+    "ApiBaseUrl": "https://api.pegelalarm.at"
   }
 }
