--- a/innai/.gitignore
+++ b/innai/.gitignore
@@ -1,244 +1,77 @@
-Last login: Sun Oct 22 19:25:21 on ttys004
-~ ❯ cd Projects
-~/Projects ❯ ls
-Botsta                    DriverRatingApp           K8s                       SVNEV.Server              SnakeMultiplayer          Websites                  innai                     openairplay               zBerufsschule
-ChCC                      Eiszeit                   KeystoneJS                Seminar                   Strongbox                 course-registration       innai-production          svn                       zSchool
-Deprecated                Flutter                   Minecraft-Server          SharpML                   SvNußdorf                 gpt4all                   mercury_guidance_computer svnev
-DriverRating              HomeStation               PdfToEpubConverter        ShotTron                  Swift                     gpt4all-docker            nextcloud-docker-config   svnev-production
-~/Projects ❯ cd innai
-~/Projects/innai main +1 !2 ?1 ❯ ls
-docker innai  server
-~/Projects/innai main +1 !2 ?1 ❯ cd innai
-~/Projects/innai/innai main +1 !2 ?1 ❯ ls
-main.py venv
-~/Projects/innai/innai main +1 !2 ?1 ❯ ls -a
-.       ..      .idea   main.py venv
-~/Projects/innai/innai main +1 !2 ?1 ❯ cd ..
-~/Projects/innai main +1 !2 ?1 ❯ git status
-On branch main
-Your branch is up to date with 'origin/main'.
-pip-log.txt
-.tox/
-.nox/
-*.cover
-*.mo
-*.pot
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-# Environments
+# User-specific stuff
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
 
-Changes to be committed:
-  (use "git restore --staged <file>..." to unstage)
-	new file:   innai/main.py
+# AWS User-specific
+.idea/**/aws.xml
 
-Changes not staged for commit:
-  (use "git add <file>..." to update what will be committed)
-  (use "git restore <file>..." to discard changes in working directory)
-	modified:   .DS_Store
-	modified:   innai/main.py
+# Generated files
+.idea/**/contentModel.xml
 
-Untracked files:
-  (use "git add <file>..." to include in what will be committed)
-	innai/.idea/
+# Sensitive or high-churn files
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
 
-~/Projects/innai main +1 !2 ?1 ❯ git status
-On branch main
-Your branch is up to date with 'origin/main'.
+# Gradle
+.idea/**/gradle.xml
+.idea/**/libraries
 
-Changes to be committed:
-  (use "git restore --staged <file>..." to unstage)
-	new file:   innai/main.py
+# Gradle and Maven with auto-import
+# When using Gradle or Maven with auto-import, you should exclude module files,
+# since they will be recreated, and may cause churn.  Uncomment if using
+# auto-import.
+# .idea/artifacts
+# .idea/compiler.xml
+# .idea/jarRepositories.xml
+# .idea/modules.xml
+# .idea/*.iml
+# .idea/modules
+# *.iml
+# *.ipr
 
-Changes not staged for commit:
-  (use "git add <file>..." to update what will be committed)
-  (use "git restore <file>..." to discard changes in working directory)
-	modified:   .DS_Store
-	modified:   innai/main.py
+# CMake
+cmake-build-*/
 
-Untracked files:
-  (use "git add <file>..." to include in what will be committed)
-	innai/.idea/
+# Mongo Explorer plugin
+.idea/**/mongoSettings.xml
 
-~/Projects/innai main +1 !2 ?1 ❯ git add .
-~/Projects/innai main +8 ❯ git status
-On branch main
-Your branch is up to date with 'origin/main'.
-# Created by https://www.toptal.com/developers/gitignore/api/python
-# Edit at https://www.toptal.com/developers/gitignore?templates=python
+# File-based project format
+*.iws
 
-### Python ###
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+# IntelliJ
+out/
 
-# C extensions
-*.so
+# mpeltonen/sbt-idea plugin
+.idea_modules/
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+# JIRA plugin
+atlassian-ide-plugin.xml
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Cursive Clojure plugin
+.idea/replstate.xml
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# SonarLint plugin
+.idea/sonarlint/
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
 
-# Translations
-*.mo
-*.pot
+# Editor-based Rest Client
+.idea/httpRequests
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
-
-### Python Patch ###
-# Poetry local configuration file - https://python-poetry.org/docs/configuration/#local-configuration
-poetry.toml
-
-# ruff
-.ruff_cache/
-
-# LSP config files
-pyrightconfig.json
-# End of https://www.toptal.com/developers/gitignore/api/python
-~
--- INSERT --
+# Android studio 3.1+ serialized cache file
+.idea/caches/build_file_checksums.ser
