--- a/server/InnAiServer/InnAiServer/appsettings.json
+++ b/server/InnAiServer/InnAiServer/appsettings.json
@@ -11,7 +11,11 @@
     "MongoDb": "${MONGODB_CONNECTION_STRING}"
   },
   "RainRadarOptions": {
-    "ApiBaseUrl": "https://api.rainviewer.com"
+    "ApiBaseUrl": "https://api.rainviewer.com",
+    "Zoom": 8,
+    "X": 136,
+    "Y": 89
+    
   },
   "InnLevelOptions": {
     "ApiBaseUrl": "https://api.pegelalarm.at"
