--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -9,6 +9,10 @@ services:
         environment:
             MONGO_INITDB_ROOT_USERNAME: ${ROOT_USER}
             MONGO_INITDB_ROOT_PASSWORD: ${ROOT_PASSWORD}
+            MONGO_INITDB_DATABASE: ${DATABASE_NAME}
+        volumes:
+            - ./mount/mongo/data:/data/db
+            - ./mount/mongo/config:/data/configdb
 
     mongo-express:
         image: mongo-express:1.0.0
