--- a/server/InnAiServer/InnAiServer/InnAiServer.csproj
+++ b/server/InnAiServer/InnAiServer/InnAiServer.csproj
@@ -8,6 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="CsvHelper" Version="30.0.1" />
+        <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="13.4.0" />
+        <PackageReference Include="Magick.NET.Core" Version="13.4.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0-rc.1.22427.2"/>
         <PackageReference Include="MongoDB.Driver" Version="2.21.0" />
@@ -19,6 +22,12 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="Resources\RainViewerColorScheme.csv">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
