Get see levels from several stations

--- a/server/InnAiServer/InnAiServer/appsettings.Development.json
+++ b/server/InnAiServer/InnAiServer/appsettings.Development.json
@@ -12,6 +12,44 @@
     "ApiBaseUrl": "https://api.rainviewer.com"
   },
   "InnLevelOptions": {
-    "ApiBaseUrl": "https://api.pegelalarm.at"
+    "ApiBaseUrl": "https://api.pegelalarm.at",
+    "Stations": [
+      {
+        "Name": "RosenheimAboveMangfallmündung",
+        "Id": "18001508-de"
+      },
+      {
+        "Name": "Oberaudorf",
+        "Id": "18000403-de"
+      },
+      {
+        "Name": "Kufstein",
+        "Id": "201905-at"
+      },
+      {
+        "Name": "Kirchbichl",
+        "Id": "201889-at"
+      },
+      {
+        "Name": "Rattenberg",
+        "Id": "201814-at"
+      },
+      {
+        "Name": "Brixlegg",
+        "Id": "201806-at"
+      },
+      {
+        "Name": "JenbachRotholz",
+        "Id": "201681-at"
+      },
+      {
+        "Name": "HallInTirol",
+        "Id": "202572-at"
+      },
+      {
+        "Name": "Innsbruck",
+        "Id": "201525-at"
+      }
+    ]
   }
 }
