A lot of stuff happend :) - Connected api from OpenWeatherMap - long term history of precipitation map - And a lot of refactoring

--- a/server/InnAiServer/InnAiServer/InnAiServer.csproj
+++ b/server/InnAiServer/InnAiServer/InnAiServer.csproj
@@ -25,7 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="Resources\RainViewerColorScheme.csv">
+      <None Update="Resources\OpenWeatherMapColorScheme.csv">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
