--- a/server/InnAiServer/InnAiServer/appsettings.Development.json
+++ b/server/InnAiServer/InnAiServer/appsettings.Development.json
@@ -8,8 +8,8 @@
   "ConnectionStrings": {
     "MongoDb": "mongodb://root:password@localhost:27017/"
   },
-  "RainRadarOptions": {
-    "ApiBaseUrl": "https://api.rainviewer.com"
+  "PrecipitationClientOptions": {
+    "ApiKey": "b058639f0971cd5eb2a59747b3f9e4ab"
   },
   "InnLevelOptions": {
     "ApiBaseUrl": "https://api.pegelalarm.at",
