--- a/server/InnAiServer/InnAiServer/appsettings.json
+++ b/server/InnAiServer/InnAiServer/appsettings.json
@@ -10,12 +10,11 @@
   "ConnectionStrings": {
     "MongoDb": "${MONGODB_CONNECTION_STRING}"
   },
-  "RainRadarOptions": {
-    "ApiBaseUrl": "https://api.rainviewer.com",
+  "PrecipitationClientOptions": {
+    "ApiBaseUrl": "http://maps.openweathermap.org",
     "Zoom": 8,
     "X": 136,
     "Y": 89
-    
   },
   "InnLevelOptions": {
     "ApiBaseUrl": "https://api.pegelalarm.at"
