Finer classification of precipitaion

--- a/server/InnAiServer/InnAiServer/appsettings.json
+++ b/server/InnAiServer/InnAiServer/appsettings.json
@@ -14,7 +14,8 @@
     "ApiBaseUrl": "http://maps.openweathermap.org",
     "Zoom": 8,
     "X": 136,
-    "Y": 89
+    "Y": 89,
+    "ColorPalette": "0:000000;1:646464;10:808080;50:ACACAC:140:FFFFFF"
   },
   "InnLevelOptions": {
     "ApiBaseUrl": "https://api.pegelalarm.at"
