--- a/server/InnAiServer/InnAiServer/appsettings.Development.json
+++ b/server/InnAiServer/InnAiServer/appsettings.Development.json
@@ -15,7 +15,7 @@
     "ApiBaseUrl": "https://api.pegelalarm.at",
     "Stations": [
       {
-        "Name": "RosenheimAboveMangfallmündung",
+        "Name": "RosenheimAboveMangfall",
         "Id": "18001508-de"
       },
       {
