--- a/server/InnAiServer/InnAiServer/InnAiServer.csproj
+++ b/server/InnAiServer/InnAiServer/InnAiServer.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
@@ -28,6 +28,10 @@
       <None Update="Resources\OpenWeatherMapColorScheme.csv">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\InnAi.Core\InnAi.Core.csproj" />
     </ItemGroup>
 
 </Project>
